# tools

./: .gitignore  CLAUDE.md  CNAME  daily_review.py  ledger_analysis.py  notify.md  notify.py  stock_price_notify.py  weekly_summary.py
.claude/: launch.json
anthropic_update_translator/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
article_summary/: article_summary.swift  article_summary_gui.sh
claw/: README.md  install-skills.sh  pyproject.toml  reload.sh
claw/claw/: __main__.py  attachments.py  backfill.py  bot.py  config.py  cron.py  dispatcher.py  memory.py  menubar.py  reactions.py  replies.py  skills.py  storage.py
claw/claw/cli/: __init__.py  base.py  claude.py  gemini.py
claw/docs/: design.md
claw/examples/: cron.toml
claw/examples/skills/daily-retro/: SKILL.md
claw/examples/skills/summary/: SKILL.md
claw/examples/skills/translate/: SKILL.md
claw/launchd/: com.paulwu.claw.plist
claw/tests/: test_attachments.py  test_claude_adapter.py  test_config.py  test_cron.py  test_dispatcher.py  test_gemini_adapter.py  test_memory.py  test_replies.py  test_skills.py  test_storage.py
common/: gemini.py  notify.py  notion.py
configs/: ideavimrc  zshenv
document_translator/: .gitignore  GEMINI.md  MANUAL.md  PLAN.md  README.md  requirements.txt
eat_later/: bot.py  deploy.sh  eat_later.py  extractor.py  notion_writer.py  requirements.txt  state.json
leadtime_analyze/: analyze.py
ledger_analysis/: ledger_analysis.py
lottie/: README.md  video_to_lottie.py
macos_init/: setup_ghostty.sh  setup_ideavim.sh  (+3 more)
(+438 files in other folders)
